# ibkr-czech-german-tax-declaration-engine

./: .gitignore  AI_CONTEXT.md  AUDIT_REPORT_2026-07.md  CHANGELOG.md  README.md  pyproject.toml
.claude/: launch.json
docs/: ai-guidelines.md  cz-plugin.md  cz-tax-policy.md  development.md  engineering-decisions.md  future-work.md  ibkr-flex-query-setup.md
src/: cli.py  config.py  main.py  pipeline_runner.py
src/classification/: asset_classifier.py
src/domain/: assets.py  enums.py  events.py  results.py
src/engine/: calculation_engine.py  fifo_manager.py  pairing.py  pairing_solver.py
src/mcp_server/: __init__.py  __main__.py  server.py
src/parsers/: domain_event_factory.py  parsing_orchestrator.py  raw_models.py
src/processing/: option_trade_linker.py  withholding_tax_linker.py
tests/: test_audit_2026_07_fixes.py  test_audit_fixes.py  test_cz_annual_limit_and_netting.py  test_cz_dividend_separate_base.py  test_cz_exporters.py  test_cz_foreign_tax_credit.py  test_cz_form_mapping.py  test_cz_ftc_boundaries.py  test_cz_fx_policy.py  test_cz_invariants.py  test_cz_margin_interest.py  test_cz_pairing_methods.py  test_cz_pdf_exporter.py  test_cz_plugin.py  test_cz_tax_items.py  test_cz_time_test.py  test_cz_time_test_boundaries.py  test_cz_uniform_fx.py  test_dividend_handling.py  test_golden_e2e_cz.py  test_golden_scenarios_cz.py  test_mcp_server.py  test_soy_snapshot_lots.py  test_time_test_deadline.py  test_webapp_classification.py  test_webapp_ibkr_flex.py  test_webapp_jobs.py  test_webapp_quotes.py  test_webapp_routes.py  test_webapp_services.py
(+59 files in other folders)
